# many-wasm

./: Cargo.toml  Makefile  README.md
demo/: config.json5
demo/kvstore.db/: IDENTITY  LOG  MANIFEST-000005
demo/ledger.db/: IDENTITY  LOG  OPTIONS-000009
src/init/ledger_init/: Cargo.toml
src/init/ledger_init/src/: lib.rs
src/many-wasm/: Cargo.toml
src/many-wasm-server/: Cargo.toml
src/many-wasm-server/src/: abi.rs  config.rs  executor.rs  main.rs  storage.rs  wasm_engine.rs
src/many-wasm-server/src/abi/: many.rs  store.rs  wasi_snapshot_preview1.rs
src/many-wasm-server/src/storage/: memory.rs  merk.rs
src/many-wasm-server/src/wasm_engine/: state.rs
src/many-wasm/src/: host.rs  lib.rs
src/many-wasm/src/host/: many.rs  store.rs
src/modules/_2_ledger/: Cargo.toml
src/modules/_2_ledger/src/: lib.rs
src/storage/ledger/: Cargo.toml
src/storage/ledger/src/: lib.rs
