[package]
name = "many-wasm-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
clap = { version = "4.0.15", features = ["default", "derive"] }
clap-verbosity-flag = "2.0.0"
coset = "0.3.3"
hex = "0.4.3"
many-error = { git = "https://github.com/hansl/many-rs.git", branch = "make-it-no-std-ish" }
many-identity = { git = "https://github.com/hansl/many-rs.git", branch = "make-it-no-std-ish" }
many-identity-dsa = { git = "https://github.com/hansl/many-rs.git", branch = "make-it-no-std-ish", features = ["ed25519", "ecdsa"] }
many-protocol = { git = "https://github.com/hansl/many-rs.git", branch = "make-it-no-std-ish" }
many-server = { git = "https://github.com/hansl/many-rs.git", branch = "make-it-no-std-ish" }
tiny_http = "0.12.0"
tokio = { version = "1.21.2", features = ["default", "macros", "rt", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wasmtime = { version = "1.0.1" }
