[package]
name = "many-wasm-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
clap = { version = "4.0.15", features = ["default", "derive"] }
clap-verbosity-flag = "2.0.0"
coset = "0.3.3"
hex = "0.4.3"
json5 = "0.4.1"
many-error = { git = "https://github.com/hansl/many-rs.git", branch = "make-it-no-std-ish" }
many-identity = { git = "https://github.com/hansl/many-rs.git", branch = "make-it-no-std-ish" }
many-identity-dsa = { git = "https://github.com/hansl/many-rs.git", branch = "make-it-no-std-ish", features = ["ed25519", "ecdsa"] }
many-protocol = { git = "https://github.com/hansl/many-rs.git", branch = "make-it-no-std-ish" }
many-server = { git = "https://github.com/hansl/many-rs.git", branch = "make-it-no-std-ish" }
merk = { git = "https://github.com/liftedinit/merk.git", rev = "da0b660abbfd58abd4a942773f205d2c079f3b27" }
rand = "0.8.5"
serde = "1.0.147"
serde_derive = "1.0.147"
sha3 = "0.10.6"
tiny_http = "0.12.0"
tokio = { version = "1.21.2", features = ["default", "macros", "rt", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wasi = "0.11.0"
wasi-common = "3.0.1"
wasmtime = { version = "3.0.1", features = ["default"] }
wasmtime-wasi = "3.0.1"
wiggle = { version = "3.0.1", features = ["wasmtime_async"] }
